--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.1.0",
+    "@radix-ui/react-navigation-menu": "^0.1.2",
     "framer-motion": "^4.1.17",
-    "next": "11.1.2",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-div-100vh": "^0.6.0",
     "react-dom": "17.0.2",
